# tlecture

./: README.md  pyproject.toml
notebooks/: SyntheticData-ImportingModule.ipynb  SyntheticData.ipynb  tlecture.py
slides/: 2022-07-12_TrialLecture.tex
tlecture/: __init__.py
