[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tlecture"
version = "0.1.0"
authors = [
  { name="Dieter Werthmüller", email="dieter@werthmuller.org" },
]
description = "My functions to create synthetic data"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

[tool.setuptools]
packages = ["tlecture", ]

[project.urls]
"Homepage" = "https://github.com/prisae/tlecture"
"Bug Tracker" = "https://github.com/prisae/tlecture/issues"
